# read-master

./: .cursorignore  .cursorrules  .env.example  .gitignore  .mcp.json  .prettierignore  ADMIN_ANALYTICS_IMPLEMENTATION.md  CLAUDE.md  CROSS_PLATFORM_PARITY.md  CURSOR_RALPH_PROMPT.md  FRONTEND_TASKS_TEMPLATE.md  IMPLEMENTATION_ANALYSIS.md  IMPLEMENTATION_STATUS.md  PRD_EXPANSION_SUMMARY.md  PRD_GUIDE.md  PRD_SUMMARY.md  RALPH_UPDATE_TIMEOUTS.md  README_PRD.md  SCRIPTS_UPDATED.md  SEED_DATA_REQUIREMENT.md  TIMEOUT_FIX.md  TIMEOUT_GUIDE.md  eslint.config.js  package.json  pnpm-lock.yaml  prd.json  prettier.config.js  progress.txt  progress_update.txt  ralph-prd-afk.sh  ralph-prd.sh  tsconfig.json  vercel.json
.husky/: pre-commit
apps/api/: eslint.config.js  openapi.json  package.json  tsconfig.json  vitest.config.ts
apps/api/api/: feed.test.ts  feed.ts  health.test.ts  health.ts
apps/api/src/: index.ts
apps/desktop/: README.md  package.json  tsconfig.json
apps/desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/desktop/src-tauri/src/: commands.rs  main.rs  menu.rs  tray.rs
apps/mobile/: README.md  app.json  package.json  tsconfig.json
apps/web/: eslint.config.js  index.html  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
docs/: AI_DEV_PIPELINE_WORKFLOW.md  CDN_SETUP.md  EMAIL_SERVICE_SETUP.md  IMPLEMENTATION_PLAN.md  MANUAL_TESTING_PLAN.md  POSTHOG_SETUP.md  RALPH_PROMTS.md  RALPH_WIGGUM.md  SENTRY_SETUP.md  SPECIFICATIONS.md  STRIPE_SETUP.md  prd.json
scripts/: ralph-loop.sh  ralph-once.sh  ralph.sh  setup.sh
(+763 files in other folders)
